# CLI-applications

./: CMakeLists.txt  README.md  common.hpp  consumer.cpp  producer.cpp
